--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mirror-app-board</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>Ledger Dashboard</title>
+    <meta name="description" content="Ledger Dashboard" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="mirror-app-board" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Ledger Dashboard" />
+    <meta property="og:description" content="This is the site that shows the analytics of the Healthcare." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="HealthAgent" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
